<resources>
    <string name="app_name"><![CDATA[COUPONS & TREND]]></string>
    <string name="lang">en</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_deal">Deal</string>
    <string name="title_add_coupon">Add Coupon</string>
    <string name="title_more">More</string>
    <string name="title_filter">Filter</string>
    <string name="search_hint">What would you like to find ?</string>
    <string name="what_would_you_like_to_find">What would you like to find ?</string>
    <string name="desc_add_capoun">If you have a store and want to suggest a coupon, you can fill out Data and send it and Steam will respond to your request</string>
    <string name="email">Email</string>
    <string name="whats_up">Whats up</string>
    <string name="store">Store</string>
    <string name="brand">Brand</string>
    <string name="description">Description</string>
    <string name="coupon">Coupon</string>
    <string name="send">Send</string>
    <string name="used_coupons">Used Coupons</string>
    <string name="follow_us_on_instagram">Follow us on Instagram</string>
    <string name="follow_us_on_snapchat">Follow us on Snapchat</string>
    <string name="join_us_on_telegram">Join us on Telegram</string>
    <string name="desc_welcome">The best discounts, discount codes, discount coupons for online stores and your favorite shopping sites in Saudi Arabia, UAE and more.</string>
    <string name="start">Start</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don’t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="share_app">Share app</string>
    <string name="change_password">Change Password</string>
    <string name="more_setting">More setting</string>
    <string name="setting_app">Setting App</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="this_filed_is_empty">This filed is empty</string>
    <string name="full_name">Full name</string>
    <string name="email_invalid">This email invalid</string>
    <string name="mobile_invalid">This mobile invalid</string>
    <string name="password_must_be_more_than_6">Password length must be more than 6</string>
    <string name="problem_when_try_to_connect">There is a problem when trying to connect</string>
    <string name="register_now">Register Now</string>
    <string name="discount">Discount</string>
    <string name="shop_now">Shop now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coupons_have_been_used">Coupons Have Been Used</string>
    <string name="last_used">Last Used</string>
    <string name="get_code">get code</string>
    <string name="coupon_has_ended">Coupon has ended</string>
    <string name="all">All</string>
    <string name="how_was_your_experience">How Was Your Experience?</string>
    <string name="tell_us_if_it_works_well">Tell Us If It Works Well</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="times">Times</string>
    <string name="coupon_was_copied">CODE HAS BEEN COPIED</string>
    <string name="back_to_app">Back To App</string>
    <string name="reviews">Reviews</string>
    <string name="products">Products</string>
    <string name="company">Company</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="password_not_match">Password don\'t match</string>
    <string name="desc_contact_us">Share your suggestion or complaint to provide you with the best services</string>
    <string name="title">Title</string>
    <string name="results">Results</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="choose_country">Choose Country</string>
    <string name="confirm">Confirm</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="we_display_coupons_and_stores_available_for_your_country">We display coupons and stores available for your country</string>
    <string name="coupon_notification">Coupon Notification</string>
    <string name="save">Save</string>
    <string name="telegram_not_installed">Telegram not Installed</string>
    <string name="gmail_not_installed">Gmail not Installed</string>
    <string name="please_enter_your_email_for_a_refund_password">Please enter your email for a refund password</string>
    <string name="the_random_password_has_been_sent_to_your_email_please_check">The random password has been sent to your Email please check</string>
    <string name="open_gmail">Open Gmail</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="latest_coupons">Latest Coupons</string>
    <string name="most_used">Most Used</string>
    <string name="more">More</string>
    <string name="company_name">Company name</string>
    <string name="category">Category</string>
    <string name="reset">Reset</string>
    <string name="show_coupon">Show Coupon</string>
    <string name="empty_favorite">Empty Favorite</string>
    <string name="website">Website</string>
    <string name="i_agree_to_the">I agree to</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="thank_you">Thank you !</string>
    <string name="cancel">Cancel</string>
    <string name="choose_category">Choose Category</string>
    <string name="hide">Hide</string>
    <string name="choose_company">Choose Company</string>
    <string name="must_agree_on_terms_and_condition">Must agree to the terms and condition</string>
    <string name="ad">Ad</string>
    <string name="orders">Orders</string>
    <string name="contact_us_on_what_s_up">Contact us on What\'s Up</string>
    <string name="thank_you_for_choosing_us">Thank you For choosing us</string>
    <string name="best_selling">Best selling</string>
    <string name="title_trend">Trend</string>
    <string name="was_your_experience_good">How Was Your Experience?</string>
    <string name="review_app">Review Appliaction</string>
    <string name="select_mode">Select mode</string>
    <string name="modern">Modern</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="telegram">Telegram</string>
    <string name="snapchat">Snapchat</string>
    <string name="offer">Offer</string>
    <string name="details">Details</string>
    <string name="details_option">Details (Optional)</string>
    <string name="store_link_optional">Store Link (Optional)</string>
    <string name="contact_email_option">Contact Email (Optional)</string>
    <string name="promo_code">Promo Code</string>
    <string name="hello">Hello!</string>
    <string name="coupons_used">Coupons Used</string>
    <string name="conditions">Conditions</string>
    <string name="adding_coupons_for_online_stores_affiliate_program_not_included">Adding coupons for online stores, affiliate program not included</string>
    <string name="the_coupon_should_be_valid">The Coupon should be valid</string>
    <string name="one_coupon_could_be_add_per_store">One coupon could be add per store</string>
    <string-array name="language">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
</resources>