<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mohannad.coupon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mohannad.coupon.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_deal"
        android:name="com.mohannad.coupon.ui.deal.DealFragment"
        android:label="@string/title_deal"
        tools:layout="@layout/fragment_deal" />

    <fragment
        android:id="@+id/navigation_add_coupon"
        android:name="com.mohannad.coupon.ui.coupon.AddCouponFragment"
        android:label="@string/title_add_coupon"
        tools:layout="@layout/fragment_add_coupon" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.mohannad.coupon.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>