<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="signUpViewModel"
            type="com.mohannad.coupon.view.ui.auth.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.auth.signup.SignUpActivity">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/hello"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/et_full_name_activity_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_full_name_activity_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:text="@={signUpViewModel.fullName}"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_full_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_filed_is_empty"
            android:textColor="@color/red"
            android:visibility="@{safeUnbox(signUpViewModel.errorFullName) ?  View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="@+id/et_full_name_activity_signup"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name_activity_signup" />

        <EditText
            android:id="@+id/et_email__activity_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:text="@={signUpViewModel.email}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name_error" />

        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={signUpViewModel.errorEmail}"
            android:textColor="@color/red"
            android:visibility="@{safeUnbox(signUpViewModel.showErrorEmail) ?  View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="@+id/et_email__activity_signup"
            app:layout_constraintTop_toBottomOf="@+id/et_email__activity_signup" />

        <EditText
            android:id="@+id/et_password__activity_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:text="@={signUpViewModel.password}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_error" />

        <TextView
            android:id="@+id/tv_password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={signUpViewModel.errorPassword}"
            android:textColor="@color/red"
            android:visibility="@{safeUnbox(signUpViewModel.showErrorPassword) ?  View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="@+id/et_password__activity_signup"
            app:layout_constraintTop_toBottomOf="@+id/et_password__activity_signup" />


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:onClick="@{(view) -> signUpViewModel.onClick()}"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password__activity_signup" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loading"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/loading_dots"
            android:visibility="@{safeUnbox(signUpViewModel.dataLoading) ?  View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>