<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.coupon.AddCouponFragment">

    <TextView
        android:id="@+id/tv_desc_add_capoun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/desc_add_capoun"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ly_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_white_raduis_6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tv_desc_add_capoun"
        app:layout_constraintStart_toStartOf="@+id/tv_desc_add_capoun"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_add_capoun">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_email" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/email"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_white_raduis_6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ly_email"
        app:layout_constraintStart_toStartOf="@+id/ly_email"
        app:layout_constraintTop_toBottomOf="@id/ly_email">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_email" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/whats_up"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_white_raduis_6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ly_mobile"
        app:layout_constraintStart_toStartOf="@+id/ly_mobile"
        app:layout_constraintTop_toBottomOf="@id/ly_mobile">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_store" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/store"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_white_raduis_6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ly_store"
        app:layout_constraintStart_toStartOf="@+id/ly_store"
        app:layout_constraintTop_toBottomOf="@id/ly_store">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_brand" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/brand"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_white_raduis_6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ly_brand"
        app:layout_constraintStart_toStartOf="@+id/ly_brand"
        app:layout_constraintTop_toBottomOf="@id/ly_brand">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_description" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/description"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_coupon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_white_raduis_6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ly_description"
        app:layout_constraintStart_toStartOf="@+id/ly_description"
        app:layout_constraintTop_toBottomOf="@id/ly_description">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_coupon_17dp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/coupon"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_btn_raduis_22dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ly_coupon"
        app:layout_constraintStart_toStartOf="@+id/ly_coupon"
        app:layout_constraintTop_toBottomOf="@+id/ly_coupon" />
</androidx.constraintlayout.widget.ConstraintLayout>